--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
 	    <version>4.12.0</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>5.2.4</version>
+	</dependency>
+
+	
 	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java 
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
