--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>5.2.4</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.github.ozlerhakan/poiji -->
+	<dependency>
+	    <groupId>com.github.ozlerhakan</groupId>
+	    <artifactId>poiji</artifactId>
+	    <version>4.1.2</version>
+	</dependency>
 
 	
 	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java 
