--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.GroupId</groupId>
-  <artifactId>artifactID</artifactId>
+  <groupId>com.group</groupId>
+  <artifactId>SeleniumFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <name>artifactID</name>
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>15</maven.compiler.source>
+    <maven.compiler.target>15</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -38,7 +38,7 @@
 	<dependency>
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
-	    <version>4.12.0</version>
+	    <version>4.29.0</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
